package structuration.bridge.eni;

/**
 * Implementation pour les deux formulaires
 */
public interface FormulaireImpl {
    void dessineTexte(String texte);
    String gereZoneTexte();
}
